Add initial API and UI auth model
